--- a/style.css
+++ b/style.css
@@ -1,2 +1,310 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600,700|Open+Sans:400,700|Cardo:400i&subset=latin-ext");
+body {
+  font-family: "Raleway", sans-serif; }
+
+section {
+  margin: 100px 0; }
+
+h1, h3 {
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 700; }
+
+h1 {
+  font-family: "Open Sans", sans-serif; }
+
+h2 {
+  font-size: 22px; }
+  h2 small {
+    color: #e84545;
+    display: block;
+    font-size: 13px;
+    margin: 10px 0;
+    text-transform: uppercase; }
+
+h3 {
+  font-size: 14px; }
+
+section h2, h3 {
+  color: #2d3033; }
+
+section p {
+  color: #6c7279; }
+
+.btn-primary {
+  background: #e84545;
+  border: none;
+  border-radius: 2px;
+  line-height: 13px;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 15px 40px;
+  text-transform: uppercase; }
+
+.btn-primary:hover {
+  background: #d11d1d; }
+
+.social-btn, #team .thumbnail .caption .social > .btn, .footer .row:nth-of-type(1) .social > .btn {
+  background: none;
+  padding: 0;
+  font-size: 18px;
+  height: 40px;
+  line-height: 40px;
+  width: 40px;
+  transition: .3s; }
+
+.lead {
+  color: #2d3033;
+  font-size: 24px;
+  font-weight: 300; }
+
+@media (min-width: 768px) {
+  .lead {
+    font-size: 28px; } }
+
+.signature {
+  color: #2d3033;
+  font-family: "Raleway", sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+/* HEADER */
+header {
+  background: url(images/header.jpg) center no-repeat; }
+  header .navbar-inverse {
+    background: rgba(49, 52, 84, 0.95);
+    border: none;
+    border-radius: 0;
+    margin-bottom: 0; }
+    header .navbar-inverse .container {
+      border-bottom: 1px solid #6c7279; }
+      header .navbar-inverse .container ul li a {
+        color: #fff;
+        font-size: 13px;
+        font-weight: 700;
+        text-transform: uppercase; }
+      header .navbar-inverse .container ul li a:hover,
+      header .navbar-inverse .container ul li a:focus,
+      header .navbar-inverse .container ul li.active a {
+        background: none;
+        color: #e84545; }
+      header .navbar-inverse .container .navbar-toggle {
+        border: none; }
+        header .navbar-inverse .container .navbar-toggle:focus, header .navbar-inverse .container .navbar-toggle:hover {
+          background: #e84545; }
+  header .jumbotron {
+    background: rgba(49, 52, 84, 0.95);
+    color: #fff;
+    min-height: 100vh;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-flex-direction: column;
+    flex-direction: column; }
+
+@media (min-width: 768px) {
+  header .navbar .container .navbar-brand {
+    padding: 30px 0; }
+    header .navbar .container .navbar-brand img {
+      height: 20px;
+      width: auto; }
+  header .navbar .container ul li a {
+    line-height: 50px; }
+  header .jumbotron {
+    min-height: 750px;
+    padding-top: 100px; }
+    header .jumbotron h1 {
+      font-size: 45px; }
+    header .jumbotron p {
+      font-size: 22px;
+      padding: 20px 100px; } }
+
+@media (min-width: 992px) {
+  header .navbar .container .navbar-brand {
+    padding: 40px 0; }
+    header .navbar .container .navbar-brand img {
+      height: 20px;
+      width: auto; }
+  header .navbar .container ul li a {
+    margin: 25px 0 25px 50px;
+    padding: 0; } }
+
+/* FEATURES SECTION */
+#features p {
+  margin: 20px 30px 50px; }
+
+/* WORKS SECTION */
+#works h3, #works p {
+  color: #fff; }
+
+#works [class*="col-"] {
+  padding: 0; }
+
+#works [class*="project-"] {
+  margin: 1px;
+  position: relative; }
+  #works [class*="project-"] .desc {
+    background: rgba(232, 69, 69, 0.9);
+    display: block;
+    padding: 1px 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0; }
+
+#works .project-1 {
+  background: url(https://images.pexels.com/photos/296878/pexels-photo-296878.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-2 {
+  background: url(https://images.pexels.com/photos/71983/black-and-white-interior-macbook-drawing-71983.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-3 {
+  background: url(https://images.pexels.com/photos/257897/pexels-photo-257897.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-4 {
+  background: url(https://images.pexels.com/photos/381949/pexels-photo-381949.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-5 {
+  background: url(https://images.pexels.com/photos/266176/pexels-photo-266176.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-6 {
+  background: url(https://images.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-7 {
+  background: url(https://images.pexels.com/photos/95916/pexels-photo-95916.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+#works .project-8 {
+  background: url(https://images.pexels.com/photos/273691/pexels-photo-273691.jpeg?h=350&auto=compress&cs=tinysrgb) center/cover;
+  height: 350px; }
+
+@media (min-width: 768px) {
+  #works [class*="project-"] .desc {
+    display: none; }
+  #works [class*="project-"]:hover > .desc {
+    display: block;
+    height: 350px;
+    padding: 20px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-flex-direction: column;
+    flex-direction: column; } }
+
+/* TEAM SECTION */
+#team .thumbnail {
+  border: none;
+  padding: 0; }
+  #team .thumbnail .caption {
+    padding: 0; }
+    #team .thumbnail .caption p {
+      margin: 25px 0; }
+    #team .thumbnail .caption .social > .btn {
+      border: 1px solid #c6cacc;
+      border-radius: 0;
+      color: #c6cacc; }
+      #team .thumbnail .caption .social > .btn:hover {
+        background: #c6cacc;
+        color: #fff; }
+
+@media (min-width: 768px) {
+  #team {
+    text-align: left; } }
+
+/* CLIENTS SECTION */
+#clients {
+  background: #53354a; }
+  #clients .container {
+    position: relative; }
+    #clients .container .col-md-offset-6 {
+      position: absolute; }
+  #clients .image {
+    background: url(images/quotes.jpg) right/cover no-repeat;
+    min-height: 300px; }
+  #clients .carousel .carousel-indicators li {
+    background: rgba(255, 255, 255, 0.2);
+    border: none;
+    height: 12px;
+    margin: 0 3px;
+    width: 12px; }
+    #clients .carousel .carousel-indicators li.active {
+      background: white; }
+  #clients .carousel .carousel-caption {
+    min-height: 500px;
+    position: static;
+    text-align: left;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-flex-direction: column;
+    flex-direction: column; }
+    #clients .carousel .carousel-caption blockquote {
+      border: none;
+      font-family: 'Cardo', serif;
+      font-size: 24px; }
+      #clients .carousel .carousel-caption blockquote footer, #clients .carousel .carousel-caption blockquote p {
+        margin-top: 25px;
+        color: #fff; }
+
+@media (min-width: 768px) {
+  #clients .image {
+    min-height: 500px; }
+  #clients .carousel .carousel-indicators {
+    bottom: 90px; }
+  #clients .carousel .carousel-caption {
+    line-height: 1.1;
+    min-height: 500px;
+    padding: 0 0 100px 30px; }
+    #clients .carousel .carousel-caption blockquote {
+      font-size: 36px; } }
+
+@media (min-width: 992px) {
+  #clients .carousel {
+    max-width: 600px; } }
+
+/* DOWNLOAD SECTION */
+#download .btn {
+  margin-top: 30px;
+  padding-left: 80px;
+  padding-right: 80px; }
+
+/* FOOTER */
+.footer {
+  background: rgba(58, 62, 100, 0.95); }
+  .footer h3, .footer p, .footer address {
+    color: #fff; }
+  .footer .row:nth-of-type(1) {
+    margin: 70px 0; }
+    .footer .row:nth-of-type(1) address,
+    .footer .row:nth-of-type(1) p:not([class*="social"]) {
+      opacity: .5; }
+    .footer .row:nth-of-type(1) .social > .btn {
+      border: 2px solid #fff;
+      border-radius: 2px;
+      color: #fff;
+      line-height: 36px; }
+      .footer .row:nth-of-type(1) .social > .btn:hover {
+        background: #fff;
+        color: rgba(58, 62, 100, 0.95); }
+  .footer .row:nth-of-type(2) {
+    background: rgba(49, 52, 84, 0.95);
+    color: #808080;
+    padding: 30px 0; }
+    .footer .row:nth-of-type(2) p {
+      margin: 0; }
+    .footer .row:nth-of-type(2) a {
+      color: #fff; }
+  .footer .fa-heart {
+    color: red; }
 
 /*# sourceMappingURL=style.css.map */
